force-app/main/default/objects/Gear_Order_Item__c/Gear_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Gear Order Item</label>
    <nameField>
        <displayFormat>GOI-{0000000000}</displayFormat>
        <label>Order Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gear Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>