force-app/main/default/objects/Gear_Order_Item__c/fields/Clothing_Size__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Size__c</fullName>
    <label>Clothing Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clothing_Sizes</valueSetName>
    </valueSet>
</CustomField>