force-app/main/default/objects/Gear_Order_Item__c/fields/Diaper_Size__c.field-meta.xml
<CustomField>
    <fullName>Diaper_Size__c</fullName>
    <label>Diaper Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diaper_Sizes</valueSetName>
    </valueSet>
</CustomField>