force-app/main/default/objects/Gear_Order_Item__c/fields/Diaper_Swim_Size__c.field-meta.xml
<CustomField>
    <fullName>Diaper_Swim_Size__c</fullName>
    <label>Diaper (Swim) Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diaper_Swim_Size</valueSetName>
    </valueSet>
</CustomField>