force-app/main/default/objects/Gear_Order_Item__c/fields/For_Child__c.field-meta.xml
<CustomField>
    <fullName>For_Child__c</fullName>
    <formula>IF(ISBLANK(Gear_Order_Demographic__c), &#39;UNKNOWN&#39;, TEXT(Gear_Order_Demographic__r.Child_Gender__c) + &#39; | &#39; + TEXT(Gear_Order_Demographic__r.Child_Age__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Child</label>
    <type>Text</type>
</CustomField>