force-app/main/default/objects/Gear_Order_Item__c/fields/Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck if this line item couldn&#39;t be fulfilled, or not fulfilled with the requested quantity</inlineHelpText>
    <label>Fulfilled</label>
    <type>Checkbox</type>
</CustomField>