force-app/main/default/objects/Gear_Order_Item__c/fields/Gear_Order__c.field-meta.xml
<CustomField>
    <fullName>Gear_Order__c</fullName>
    <label>Gear Order</label>
    <referenceTo>Gear_Order__c</referenceTo>
    <relationshipLabel>Gear Order Items</relationshipLabel>
    <relationshipName>Gear_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>