force-app/main/default/objects/Gear_Order_Item__c/fields/Gear_Order_Demographic__c.field-meta.xml
<CustomField>
    <fullName>Gear_Order_Demographic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gear Order Demographic</label>
    <referenceTo>Gear_Order_Demographic__c</referenceTo>
    <relationshipLabel>Gear Order Items</relationshipLabel>
    <relationshipName>Gear_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>