force-app/main/default/objects/Gear_Order_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Gear Order Items</relationshipLabel>
    <relationshipName>Gear_Order_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>