force-app/main/default/objects/Gear_Order_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of item bundles of this product.</description>
    <inlineHelpText>The number of item bundles of this product.</inlineHelpText>
    <label>Quantity (Bundles)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>