force-app/main/default/objects/Gear_Order_Item__c/fields/Quantity_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Fulfilled__c</fullName>
    <label>Quantity (Bundles) Fulfilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>