force-app/main/default/objects/Gear_Order_Item__c/fields/Quantity_Items__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Items__c</fullName>
    <description>The number of individual items required to fulfill this line item. This field is calculated by multiplying the line item quantity times the product item bundle.</description>
    <inlineHelpText>The number of individual items required to fulfill this line item. This field is calculated by multiplying the line item quantity times the product item bundle.</inlineHelpText>
    <label># Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>