force-app/main/default/objects/Gear_Order_Item__c/fields/Quantity_Items_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Items_Fulfilled__c</fullName>
    <description>The number of individual items fulfilled for this line item. This field is calculated by multiplying the number of line items fulfilled times the product item bundle.</description>
    <inlineHelpText>The number of individual items fulfilled for this line item. This field is calculated by multiplying the number of line items fulfilled times the product item bundle.</inlineHelpText>
    <label># Items Fulfilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>