force-app/main/default/objects/Gear_Order_Item__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Order line item value = Quantity Fulfilled x Product Value</description>
    <label>Value</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>