force-app/main/default/objects/Gear_Order_Item__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <inlineHelpText>The weight (lbs) of the items in this order line item. This field is calculated as quantity times product weight (lbs).</inlineHelpText>
    <label>Weight (lbs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>